Opened 11 years ago

Closed 10 years ago

#10206 closed bug (fixed)

Flurry ScreenSaver crashes

Reported by: jscipione Owned by: kallisti5
Priority: normal Milestone: R1
Component: Kits/OpenGL Kit Version: R1/Development
Keywords: Cc:
Blocked By: Blocking: #10431, #11086, #11337
Platform: All

Description

On hrev46362, just running the screensaver is enough to cause the crash. Tested in vmware and vbox, didn't test real hardware.

Note that it doesn't always crash, most of the time it does, but, once in a while the screen saver will run without issue.

Crash log attached.

Attachments (2)

screen_blanker-440-debug-14-11-2013-20-25-12.report.txt (13.7 KB ) - added by jscipione 11 years ago.
Flurry crash report
ScreenSaver-478-debug-28-12-2013-03-32-35.report.txt (22.3 KB ) - added by jscipione 11 years ago.
Since Mesa was updated and made an optional package in hrev46590 to hrev46595 the Flurry screen saver now crashes the ScreenSaver preference app instead of crashing screen_blanker

Download all attachments as: .zip

Change History (14)

by jscipione, 11 years ago

Flurry crash report

by jscipione, 11 years ago

Since Mesa was updated and made an optional package in hrev46590 to hrev46595 the Flurry screen saver now crashes the ScreenSaver preference app instead of crashing screen_blanker

comment:1 by KapiX, 11 years ago

Component: Preferences/ScreenSaverKits/OpenGL Kit
Owner: changed from axeld to kallisti5

The reason of this crash is glGetString(GL_VERSION) = NULL. Definitely a problem with mesa packages.

Weird thing is that after installing mesa_x86_swrast on gcc2h the screen saver worked once. Then it started crashing again.

Tested on hrev46900.

in reply to:  1 ; comment:2 by jscipione, 11 years ago

Replying to KapiX:

The reason of this crash is glGetString(GL_VERSION) = NULL. Definitely a problem with mesa packages.

I don't understand where you got this info from, I don't see it in any of the above crash reports.

I now get crash report #1 again. If I uninstall mesa_swrast I get crash report #2.

in reply to:  2 comment:3 by KapiX, 11 years ago

Replying to jscipione:

I don't understand where you got this info from, I don't see it in any of the above crash reports.

I debugged it on my machine. I should have mentioned, that I was referring to the second report.

comment:4 by jscipione, 11 years ago

According to the docs: https://www.khronos.org/opengles/sdk/docs/man/xhtml/glGetString.xml

If an error is generated, glGetString returns 0.

So, either our Mesa build is seriously messed up or something else is going on. Are you are on a gcc4 or x86_64 build perhaps?

in reply to:  4 comment:5 by KapiX, 11 years ago

Replying to jscipione:

So, either our Mesa build is seriously messed up or something else is going on. Are you are on a gcc4 or x86_64 build perhaps?

As I wrote earlier I tested it on gcc2h.

comment:6 by waddlesplash, 11 years ago

Related to/duplicate of #10431 perhaps?

comment:7 by pulkomandy, 11 years ago

Blocking: 10431 added

comment:8 by anevilyak, 11 years ago

Blocking: 11086 added

(In #11086) Duplicate of #10206.

comment:9 by vidrep, 10 years ago

hrev47865_x86_gcc2 screen saver set to "blackness". Once activated, cannot return desktop.

comment:10 by vidrep, 10 years ago

Can somebody please have a look at this? Once the screensaver is activated, the only way to restore the desktop is a reboot.

comment:11 by anevilyak, 10 years ago

Blocking: 11337 added

(In #11337) Duplicate of #10206. In the future by the way, please simply attach the report file, rather than copy/pasting it into the ticket description.

comment:12 by pulkomandy, 10 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev48011.

Note: See TracTickets for help on using tickets.