Flurry: Show a preview... try number two

Also, we are safe to enable direct mode now (it already was)

This is untested due to this screensaver currently crashing but it should
work once #10206 is fixed.

Remove obvious comment in DirectConnected