src/add-ons/screen_savers/flurry/Flurry.cpp
@@ -334,9 +334,6 @@ Flurry::StartSaver(BView* view, bool preview)
 {
 	status_t result = B_ERROR;
 
-	if (preview)
-		return result;
-
 	SetTickSize(50000);
 
 	fFlurryView = new (std::nothrow) FlurryView(view->Bounds());
@@ -372,7 +369,6 @@ Flurry::DirectDraw(int32 frame)
 void
 Flurry::DirectConnected(direct_buffer_info* info)
 {
-	// Enable or disable direct rendering
 	if (fFlurryView != NULL) {
 		fFlurryView->DirectConnected(info);
 		fFlurryView->EnableDirectMode(true);
